# Alz_EEG_analyze

./: .gitignore  README.md  pyproject.toml  repo_structure.txt
data/EEG/: data_tree.txt  path.txt
script/: train.py
src/: analyzer.py  loader.py  trainer.py
